# vaultwatch

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents-python/: .dockerignore  Dockerfile  requirements-dev.txt  requirements.txt  seed.py
agents-python/app/: config.py  db.py  main.py  models.py  orchestrator.py  prefilter.py  risk_engine.py  synthetic.py
agents-python/app/llm/: compliance_agent.py  investigator_agent.py  provider.py  tools.py  transcripts.py  triage_agent.py
agents-python/tests/: test_agents.py  test_orchestrator.py  test_prefilter.py  test_tools.py
dashboard-web/: Dockerfile  package-lock.json  package.json
dashboard-web/src/app/: layout.tsx
dashboard-web/src/components/: Dashboard.tsx  StageBadge.tsx
dashboard-web/src/lib/: audit.ts  config.ts  orchestrator.ts  prefilter.ts  recentCases.ts  rules.ts  synthetic.ts  types.ts
dashboard-web/src/lib/hooks/: useLiveFeed.ts
dashboard-web/src/lib/llm/: agents.ts  (+3 more)
engine-rust/: Cargo.toml  Dockerfile
engine-rust/src/: audit.rs  main.rs  models.rs  rules.rs
gateway-go/: .dockerignore  Dockerfile  go.mod  go.sum
gateway-go/cmd/gateway/: main.go
gateway-go/internal/anomaly/: anomaly_test.go  bruteforce.go  travel.go
gateway-go/internal/auth/: auth_test.go  jwt.go  password.go  refresh.go
gateway-go/internal/events/: events.go
gateway-go/internal/ratelimit/: tokenbucket.go  tokenbucket_test.go
gateway-go/internal/service/: auth_service.go  auth_service_test.go
gateway-go/internal/store/: memory.go  postgres.go  store.go
(+3 files in other folders)
